# ImageMagick

branches/ImageMagick-6.4.9/: ChangeLog  ImageMagick.spec  LICENSE  Makefile.in  QuickStart.txt  README.txt  configure  configure.ac  index.html  libtool  magick.sh  version.sh
branches/ImageMagick-6.4.9/Magick++/: ChangeLog
branches/ImageMagick-6.4.9/PerlMagick/: Changelog  Magick.pm  Magick.xs  Makefile.PL  Makefile.PL.in  README.txt
branches/ImageMagick-6.4.9/coders/: Make.com  avi.c  avs.c  bmp.c  braille.c  cin.c  cmyk.c  dcm.c  dib.c  dpx.c  ept.c  exr.c  fax.c  gif.c  gray.c  hrz.c  icon.c  jbig.c  jpeg.c  mat.c  mpc.c  mpeg.c  msl.c  mvg.c  palm.c  pcd.c  pcx.c  pdf.c  pict.c  ps.c  ps2.c  ps3.c  psd.c  pwp.c  raw.c  rgb.c  sct.c  sfw.c  svg.c  tga.c  (+7 more)
branches/ImageMagick-6.4.9/config/: ImageMagick.rdf.in  config.h.in  configure.xml  configure.xml.in  delegates.xml
branches/ImageMagick-6.4.9/images/: logo.eps
branches/ImageMagick-6.4.9/magick/: ImageMagick.pc  Magick-config  Make.com  Makefile.am  annotate.c  blob.c  blob.h  cache-view.h  cache.c  cipher.c  color.h  colorspace.c  compare.c  compare.h  composite.c  compress.h  configure.c  decorate.c  deprecate.h  display.c  distort.c  distort.h  effect.c  effect.h  enhance.c  enhance.h  exception.c  exception.h  fx.c  hashmap.c  identify.c  image.c  image.h  layer.c  locale.c  mac.c  magick-config.h  magick.c  memory_.h  montage.c  (+30 more)
branches/ImageMagick-6.4.9/scripts/: format_c_api_docs
branches/ImageMagick-6.4.9/tests/: validate.c  validate.h  validate.sh
branches/ImageMagick-6.4.9/utilities/: ImageMagick.1  animate.1  animate.1.in  compare.1  composite.1  conjure.1  convert.1  convert.1.in  display.1  display.1.in  identify.1  import.1  mogrify.1  mogrify.1.in  montage.1  montage.1.in  stream.1
branches/ImageMagick-6.4.9/wand/: Wand-config  Wand.pc  animate.c  compare.c  conjure.c  convert.c  display.c  drawing-wand.c  drawtest.c  identify.c  import.c  magick-image.c  magick-image.h  magick-wand.c  mogrify.c  mogrify.h  montage.c  pixel-wand.c  studio.h  wand.c  wand.h
branches/ImageMagick-6.4.9/www/: ImageMagickObject.html  advanced-unix-installation.html  advanced-windows-installation.html  animate.html  api.html  architecture.html  binary-releases.html  changelog.html  cipher.html  color.html  command-line-options.html  command-line-processing.html  command-line-tools.html  compare.html  contact.html  convert.html  display.html  download.html  escape.html  examples.html  formats.html  fx.html  high-dynamic-range.html  history.html  identify.html  import.html  index.html  install-source.html  jp2.html  (+20 more)
branches/ImageMagick-6.5.0/: ChangeLog  ImageMagick.spec  Install-unix.txt  Makefile.am  configure  configure.ac  index.html  libtool  magick.sh.in  version.sh
branches/ImageMagick-6.5.1/: ChangeLog  ImageMagick.spec  LICENSE  QuickStart.txt  configure  configure.ac  index.html  libtool  version.sh
branches/ImageMagick-6.5.1/PerlMagick/: Changelog  Magick.pm  Magick.xs  Makefile.PL  Makefile.PL.in  Makefile.am
branches/ImageMagick-6.5.1/PerlMagick/demo/: pixel_fx.pl
branches/ImageMagick-6.5.1/PerlMagick/t/jng/: read.t
branches/ImageMagick-6.5.2/: ChangeLog  ImageMagick.spec  Install-unix.txt  Makefile.am  Makefile.in  configure  configure.ac  index.html  libtool  version.sh
branches/ImageMagick-6.5.3/: ChangeLog  ImageMagick.spec  ImageMagick.spec.in  Makefile.am  Makefile.in  QuickStart.txt  configure  configure.ac  index.html  libtool  version.sh
branches/ImageMagick-6.5.4/: ChangeLog  ImageMagick.spec  Makefile.am  Makefile.in  QuickStart.txt  configure  configure.ac  index.html  libtool  version.sh
branches/ImageMagick-6.7.3/: ChangeLog
branches/ImageMagick-6.7.5/: ChangeLog
branches/ImageMagick-6.7.6/: Makefile.in
trunk/MagickCore/: morphology.c
www/api/: magick++-classes.html
(+1235 files in other folders)
